--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "daisyui": "^5.1.10",
+    "emitter": "^0.0.5",
+    "html-pdf-node": "^1.0.8",
+    "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/html-pdf-node": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5"
   }
 }
