--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "daisyui": "^5.1.10",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "emitter": "^0.0.5",
     "html-pdf-node": "^1.0.8",
     "next": "15.5.3",
@@ -24,7 +27,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
