--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@googleapis/gmail": "^14.0.1",
     "@neondatabase/serverless": "^1.0.1",
+    "cookie": "^0.6.0",
     "daisyui": "^5.1.10",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "emitter": "^0.0.5",
+    "googleapis": "^160.0.0",
     "html-pdf-node": "^1.0.8",
     "next": "15.5.3",
     "pg": "^8.16.3",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/cookie": "^0.6.0",
     "@types/html-pdf-node": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
